# NexusMD

./: CMakeLists.txt  NexaBind.sln  NexaBind.vcxproj  NexaBind.vcxproj.filters  NexaBindCPU.sln  NexaBindCPU.vcxproj  NexaBindCPU.vcxproj.filters  NexaBindRunSimulationTest.cpp  NexaBindRunSimulation_Dialanine_Test.cpp  README.md  SystemStateXMLgenerator.py  SystemStateXMLgenerator_Dialanine.py  SystemXMLReader.cpp  SystemXMLgenerator.py  TotalEnergyoutput_test_3Forces.txt  output for old2.txt  output for old4.txt  output.txt  output_test_3Forces.txt  output_test_HAF_1Angle.txt  output_test_PTF_1Torsion.txt  setup.py  state.xml  state_Sample_Protein.xml  state_dialanine.xml  system.xml  system_dialanine.xml  test.py  testOpenMMSystemStateXMLLoader.cpp  testOpenMMSystemXMLLoader.cpp
NexaBind/Debug/: vc143.idb
NexaBind/Debug/NexaBind.tlog/: CL.command.1.tlog  NexaBind.lastbuildstate
NexaBind/x64/Debug/: NexaBind.exe.recipe  NexaBind.ilk  reporter.new.obj.enc  vc143.idb
NexaBind/x64/Debug/NexaBind.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NexaBind.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
NexaBind/x64/Release/: NexaBind.exe.recipe
Nexus/: CMakeLists.txt
Nexus/core/: CMakeLists.txt
Nexus/core/baseline/: CMakeLists.txt
Nexus/core/baseline/headers/: Engine.h  Initializer.h  KineticEnergy.h  VerletIntegration.h
Nexus/core/baseline/headers/Forces/: NonbondedForce.h  PeriodicTorsionForce.h
Nexus/core/baseline/src/: Engine.cpp
Nexus/core/baseline/src/Forces/: Exclusions.cpp  HarmonicBondForce.cpp  NeighborList.cpp  NonbondedForce.cpp
Nexus/core/baseline/tests/: TestBaseline_JAC_Protein.cpp
Nexus/core/common/: CMakeLists.txt
Nexus/core/cuda/: CMakeLists.txt
Nexus/core/cuda/headers/: CudaBridge.h  CudaDataStructures.h  CudaForceMapper.h
Nexus/core/cuda/headers/Forces/kernels/: HarmonicBondForceKernel.h
Nexus/core/cuda/headers/kernels/: InverseMassesKernel.h  KineticEnergyKernel.h  VerletIntegrationKernel.h
Nexus/core/cuda/src/: CudaForceMapper.cpp  CudaInitializer.cpp  CudaReporter.cpp
Nexus/core/cuda/src/Forces/: CudaNonbondedForce.cpp
Nexus/core/cuda/src/Forces/kernels/: HarmonicBondForceKernel.cu
Nexus/core/cuda/src/kernels/: InverseMassesKernel.cu  KineticEnergyKernel.cu
Nexus/core/dispatcher/: CMakeLists.txt
Nexus/core/dispatcher/headers/: BaseLineTaskDispatcher.h  CudaTaskDispatcher.h  TaskDispatcher.h
Nexus/core/dispatcher/src/: TaskDispatcher.cpp
Nexus/core/libs/: CMakeLists.txt
Nexus/core/libs/fftw-3.3.5-dll64/: CMakeLists.txt  libfftw3-3.exp  libfftw3f-3.exp  libfftw3l-3.exp  libfftw3l-3.lib
NexusMD/core/: CMakeLists.txt
NexusMD/core/baseline/: CMakeLists.txt
NexusMD/core/baseline/headers/: Reporter.h
NexusMD/core/baseline/headers/Forces/: Exclusions.h  HarmonicBondForce.h
NexusMD/core/baseline/src/: Engine.cpp  KineticEnergy.cpp  Reporter.cpp  VerletIntegration.cpp
NexusMD/core/baseline/src/Forces/: PeriodicTorsionForce.cpp
NexusMD/core/common/: CMakeLists.txt
NexusMD/core/common/headers/: Coords3D.h  StateXMLParser.h
NexusMD/core/dispatcher/: CMakeLists.txt
NexusMD/core/libs/: CMakeLists.txt
NexusMD/core/libs/fftw-3.3.5-dll64/: libfftw3-3.lib  libfftw3f-3.lib
core/Cuda/Tests/: TestCuda3Forces.cpp  TestCudaHarmonicAngleForce.cpp  TestCudaHarmonicBondForceDialanine.cpp  TestCudaHarmonicBondForceTwoAtomSystem.cpp  TestCudaPME.cpp  TestCudaPeriodicTorsionForce.cpp  TestCuda_JAC_Protein.cpp  TestCuda_Sample_Protein.cpp
core/Cuda/headers/: CudaBridge.h  CudaDataStructures.h  CudaEngine.h  CudaForceMapper.h  CudaInitializer.h  CudaKineticEnergy.h  CudaReporter.h  CudaStateXMLParser.h  CudaTypes.h  CudaVerletIntegration.h
core/Cuda/src/: CudaBridge.cpp  CudaEngine.cpp  CudaForceMapper.cpp  CudaKineticEnergy.cpp  CudaReporter.cpp  CudaStateXMLParser.cpp  CudaVerletIntegration.cpp
core/Dispatcher/headers/: BaseLineTaskDispatcher.h  CudaTaskDispatcher.h  TaskDispatcher.h
core/Dispatcher/src/: TaskDispatcher.cpp
core/baseline/Tests/: TestBaseline3Forces.cpp  TestBaselineHarmonicAngleForce.cpp  TestBaselineHarmonicBondForce.cpp  TestBaselinePME.cpp  TestBaselinePeriodicTorsionForce.cpp  TestCpu_Sample_Protein.cpp  TestCpu_Two_WaterMols_AThermostat_MCBarostat.cpp  TestCpu_Waterbox_AThermostat_MCBarostat.cpp
core/baseline/headers/: AndersenThermostat.h  Coords3D.h  Engine.h  EnsembleParameters.h  Initializer.h  KineticEnergy.h  MonteCarloBarostat.h  OpenMMSystemStateXMLLoader.h  OpenMMSystemXMLLoader.h  PeriodicBoundaryCondition.h  Reporter.h  StateXMLParser.h  SystemStateXMLParser.h  SystemXMLParser.h  Types.h  VerletIntegration.h  VerletIntegrationBaseline.h  stdafx.h
core/baseline/src/: AndersenThermostat.cpp  Engine.cpp  EnsembleParameters.cpp  Initializer.cpp  KineticEnergy.cpp  MonteCarloBarostat.cpp  OpenMMSystemStateXMLLoader.cpp  OpenMMSystemXMLLoader.cpp  PeriodicBoundaryCondition.cpp  Reporter.cpp  StateXMLParser.cpp  SystemStateXMLParser.cpp  SystemXMLParser.cpp  VerletIntegration.cpp  VerletIntegrationBaseline.cpp
core/common/headers/: DataStructures.h  PDBResidueParser.h  PDBSegmentParser.h  PeriodicBoundaryCondition.h  ResidueForceMapper.h  SegmentForceMapper.h
core/common/src/: PDBResidueParser.cpp  PDBSegmentParser.cpp  PeriodicBoundaryCondition.cpp  ResidueForceMapper.cpp  SegmentForceMapper.cpp
core/fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib
outputs/: TotalEnergyCPUoutput_test_3Forces.txt  TotalEnergyoutput_test_3Forces.txt  TotalEnergyoutput_test_HBF_1Bond.txt  output without totalforces and velocities initialization.txt  output_test_3Forces.txt  output_test_HAF_1Angle.txt  output_test_HBF_1Bond.txt
test/: NexusMDTest.py  NexusTest.py
wrapper/: CMakeLists.txt  Nexus.i  NexusMD.i  dummy.cu
x64/Debug/: vc143.idb
x64/Debug/NexaBind.tlog/: NexaBind.lastbuildstate
x64/Release/: NexaBind.exe.recipe  NexaBind.vcxproj.FileListAbsolute.txt
x64/Release/NexaBind.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NexaBind.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+53 files in other folders)
